--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "feather-icons": "^4.29.1",
     "next": "14.1.4",
     "next-cloudinary": "^6.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "sass": "^1.72.0"
   },
   "devDependencies": {
