--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,4 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "@next/next/no-document-import-in-page": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
 
